--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy to VPS
 on:
   push:
     branches:
-      - master
+      - master   # ya main (same as below)
 
 jobs:
   deploy:
@@ -17,11 +17,11 @@ jobs:
         uses: appleboy/ssh-action@v1.0.0
         with:
           host: ${{ secrets.VPS_HOST }}
-          username: ${{ secrets.VPS_USER }}
+          username: ${{ secrets.VPS_USER }}   # deploy
           key: ${{ secrets.VPS_SSH_KEY }}
           script: |
             cd /var/www/app
-            git pull origin main
+            git pull origin master
             npm install
             npm run build
             pm2 restart app || pm2 start npm --name "app" -- start
