--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy to VPS
 on:
   push:
     branches:
-      - master   # ya main (same as below)
+      - master   # ya main
 
 jobs:
   deploy:
@@ -20,7 +20,7 @@ jobs:
           username: ${{ secrets.VPS_USER }}   # deploy
           key: ${{ secrets.VPS_SSH_KEY }}
           script: |
-            cd /var/www/app
+            cd /var/www/app/store_Backend
             git pull origin master
             npm install
             npm run build
