--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,4 +23,5 @@ jobs:
             cd /var/www/app/store_Backend
             git pull origin master
             npm install
-            pm2 restart app || pm2 start npm --name "app" -- start
+            pm2 restart store_Backend || pm2 start npm --name "store_Backend" -- run start
+
