update user api intigrated

--- a/package.json
+++ b/package.json
@@ -18,5 +18,9 @@
     "mysql2": "^3.16.0",
     "nodemon": "^3.1.11",
     "sequelize": "^6.37.7"
+  },
+  "devDependencies": {
+    "@types/node": "^25.0.9",
+    "typescript": "^5.9.3"
   }
 }
